# AUTOMATA2

./: CMakeLists.txt  DFA.cpp  DFA.h  DFAversion.cpp  DFAversion.h  Match.h  NFA.h  Regex.cpp  Regex.h  RegexParser.cpp  RegexParser.h  StateElimination.cpp  SyntaxTree.cpp  SyntaxTree.h  Thompson.cpp  Thompson.h  Tokens.h  main.cpp
include/: DFAversion.h  Match.h  NFA.h  Regex.h  RegexParser.h  StateElimination.h
src/: DFAversion.cpp  Regex.cpp  RegexParser.cpp  StateElimination.cpp  SyntaxTree.cpp  Thompson.cpp
tests/: CMakeLists.txt  tests.cpp
